--- a/styles/css/project.css
+++ b/styles/css/project.css
@@ -1,5 +1,5 @@
 #projects {
-    padding: 0px 10px 70px 10px;
+    padding: 0 .8rem 3rem .8rem;
   }
   
   .project-cards {
@@ -20,6 +20,7 @@
   
   .project-image {
     position: relative;
+    border-radius: 6px;
   }
   
   .project-card img {
