--- a/styles/css/projectdetail.css
+++ b/styles/css/projectdetail.css
@@ -12,7 +12,6 @@
     max-height: 60vh;
     overflow: hidden;
     margin-bottom: 20px; /* 메인 이미지와 텍스트 사이에 여백 추가 */
-    
 }
 
 .projdetail-main-image img {
@@ -33,15 +32,20 @@
 }
 
 #projdetail-title{
-    font-size: 1.6rem;
+    font-size: 1.6rem; /* 고정된 폰트 크기 */
     font-weight: 600;
     text-transform: uppercase;
     margin-bottom: 3px;
     color: #333;
+    max-width: 300px; /* 전체 가로 크기를 100%로 설정 */
+    white-space: normal;  /* 텍스트가 넘칠 때 줄 바꿈 가능하게 설정 */
+    word-wrap: break-word; /* 긴 단어가 있을 경우 줄 바꿈하도록 설정 */
+    overflow: hidden;
+    text-overflow: ellipsis;
 }
 
 #projdetail-type{
-    font-size: .9rem;
+    font-size: 0.9rem; /* 고정된 폰트 크기 */
     text-transform: lowercase;
     color: #333;
     font-family: "Doto", serif;
@@ -55,8 +59,9 @@
 #projdetail-sub{
     color:#666;
     margin: 20px 0;
-    font-size: .75rem;
+    font-size: 0.75rem; /* 고정된 폰트 크기 */
 }
+
 .projdetail-description {
     grid-column: span 2; /* description은 두 번째 열에 위치 */
     display: grid;
@@ -73,7 +78,7 @@
     grid-column: 2/span 2; /* 두 번째와 세 번째 열을 모두 차지 */
     display: block; /* 기본 블록 레벨로 설정하여 하나의 열로 표시 */
     margin-bottom: 20px; /* skill 아래에 여백 추가 */
-    font-size: .9rem;
+    font-size: 0.9rem; /* 고정된 폰트 크기 */
     text-transform: lowercase;
     color: #333;
     font-family: "Doto", serif;
@@ -97,7 +102,7 @@
     left : 33.3333%;
     text-align: left;
     margin-bottom: 10px;
-    font-size: .75rem;
+    font-size: 0.75rem; /* 고정된 폰트 크기 */
     color:#666;
 }
 
@@ -128,7 +133,6 @@
     .projdetail-images p {
         left : 0%;
         text-align: left;
-    
     }
 
     .projdetail-images iframe {
@@ -136,8 +140,7 @@
         border: none;     /* 기본 테두리 제거 */
     }
 
-    .projdetail-description-kr
-    {
+    .projdetail-description-kr {
         display: none;
     }
 }
